correction done by gapanathy

--- a/src/App.css
+++ b/src/App.css
@@ -89,11 +89,11 @@ li {
 
 :where(.css-dev-only-do-not-override-98ntnt).ant-picker-outlined {
   background: #ffffff;
-  border-width: 1px;
-  border-style: solid;
-  border-color: rgb(0 0 0 / 20%);
+  border: none;
+  /* border-style: solid; */
+  /* border-color: rgb(0 0 0 / 20%); */
   width: 100%;
-  height: 58px;
+  /* height: 58px; */
   padding-left: 20px;
   border-radius: 0;
 }
